# edivisive-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  matrix_ops.rs  qhat.rs  util.rs
tests/: test_detect_change_points.rs
