[package]
name = "edivisive"
description = "Change point detection with E-Divisive Means"
version = "0.1.0"
authors = ["David Bradford <david.bradford@mongodb.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
ndarray = "0.14"
rand = "0.8"

[dev-dependencies]
rstest = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
